--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cheerio": "^1.0.0-rc.3",
         "ejs": "^3.1.3",
         "express": "^4.17.1",
+        "fs-extra": "^9.0.1",
         "mysql": "^2.18.1",
         "puppeteer": "^5.2.1",
         "request": "^2.88.2",
